Fix font overflow

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 .grid-block, .category-result, .submit-button, .deselect-button, .shuffle-button, .share-button {
-    font-size: clamp(0.4rem, 3vw, 1rem);
+    font-size: clamp(8px, 75%, 16px);
 }
 
 /* Grid blocks */
@@ -51,6 +51,9 @@ body {
     text-transform: uppercase;
     cursor: pointer;
     user-select: none;
+    word-break: break-word;
+    min-width: 0;
+    min-height: 0;
 }
 
 .grid-block:hover {
